# coding-cmake

templates/my_math/: CMakeLists.txt  config.h.in  main.cpp
templates/my_math/math/: CMakeLists.txt
